--- a/Views/File/Upload.cshtml
+++ b/Views/File/Upload.cshtml
@@ -15,6 +15,8 @@
         <form asp-action="Upload" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
+
+            <input asp-for="FileType" hidden value="@Model.FileType" />
             <table class="table table-bordered table-sm">
                 <div class="form-group">
                     <label asp-for="FileName" class="control-label">File Name</label>
