--- a/Views/TourSites/Edit.cshtml
+++ b/Views/TourSites/Edit.cshtml
@@ -106,27 +106,41 @@
                     <span asp-validation-for="TourSite.Description" class="text-danger"></span>
                 </div>
             </table>
-            <table class="table table-bordered table-sm">
-                <div class="form-group">
-                    <label asp-for="Longitude" class="control-label">Longitude</label>
-                    <input asp-for="Longitude" class="form-control" value="@Model.TourSite.Longitude" />
-                    <span asp-validation-for="Longitude" class="text-danger"></span>
-                </div>
-            </table>
-            <table class="table table-bordered table-sm">
-                <div class="form-group">
-                    <label asp-for="Lattitude" class="control-label">Latitude</label>
-                    <input asp-for="Lattitude" class="form-control" value="@Model.TourSite.Lattitude" />
-                    <span asp-validation-for="Lattitude" class="text-danger"></span>
-                </div>
+
+            <table class="table table-sm" cellpadding="0" cellspacing="0" border="0">
+
+                <thead class="form-group">
+                    <tr>
+                        <td class="col-sm-2">
+                            <label asp-for="Longitude" class="control-label">Longitude</label>
+                            <input asp-for="Longitude" id="long" class="form-control" value="@Model.TourSite.Longitude" />
+                            <span asp-validation-for="Longitude" class="text-danger"></span>
+                        </td>
+                        <td class="col-sm-2">
+                            <label asp-for="Lattitude" class="control-label">Latitude</label>
+                            <input asp-for="Lattitude" id="lat" class="form-control" value="@Model.TourSite.Lattitude" />
+                            <span asp-validation-for="Lattitude" class="text-danger"></span>
+                        </td>
+                    <tr />
+                </thead>
             </table>
 
-            <table class="table table-bordered table-sm">
-                <div class="form-group">
-                    <label asp-for="IconColor" class="control-label">Icon Color</label>
-                    <input asp-for="IconColor" type="color" class="form-control" value="@Model.TourSite.IconColor" />
-                    <span asp-validation-for="IconColor" class="text-danger"></span>
-                </div>
+            <table class="table table-sm" cellpadding="0" cellspacing="0" border="0">
+
+                <thead class="form-group">
+                    <tr>
+                        <td class="col-sm-2">
+                            <label asp-for="IconColor" class="control-label">Icon Color</label>
+                            <input asp-for="IconColor" type="color" class="form-control" value="@Model.TourSite.IconColor" />
+                            <span asp-validation-for="IconColor" class="text-danger"></span>
+                        </td>
+                        <td class="col-sm-2">
+                            <label asp-for="IconBorderColor" class="control-label">Icon Border Color</label>
+                            <input asp-for="IconBorderColor" type="color" class="form-control" value="@Model.TourSite.IconBorderColor" />
+                            <span asp-validation-for="IconColor" class="text-danger"></span>
+                        </td>
+                    <tr />
+                </thead>
             </table>
 
 
