--- a/Views/TourSites/Edit.cshtml
+++ b/Views/TourSites/Edit.cshtml
@@ -19,7 +19,7 @@
 <h4>Tours</h4>
 <hr />
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-12">
         <form asp-action="Edit" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" name="TourID" value="@Model.TourSite.Id" />
@@ -123,6 +123,15 @@
                         </td>
                     <tr />
                 </thead>
+
+                @* <a href="javascript:void(0);" name="/TourSites/Index" class="modalManager" extra-data='#MapData'>Open Map</a> *@
+                @* <script type="application/json" id="MapData"> *@
+                @*     { *@
+                @*         "Target": "targ" *@
+                @*     } *@
+                @* </script> *@
+                
+
             </table>
 
             <table class="table table-sm" cellpadding="0" cellspacing="0" border="0">
@@ -253,8 +262,8 @@
         });
 </script>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+@* @section Scripts { *@
+@*     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");} *@
 
 
-}
+@* } *@
