--- a/Views/TourSites/MoveTour.cshtml
+++ b/Views/TourSites/MoveTour.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Authorization
-@model TourWebsite.Models.Tours.CoordPair
+@model TourWebsite.Models.Tours.TourEdit
 @inject IAuthorizationService auth
 
 @{
@@ -10,9 +10,11 @@
 
 }
 
-<h1>Tours</h1>
-<a asp-action="ListView">List View</a>        
-<br />
+<div class="modal-header">
+    <button class="close" data-dismiss="modal" aria-hidden="true" onclick="$('#myModal').modal('hide');">×</button>
+    <h2>Users</h2>
+</div>
+
 
 @if (authorized1.Succeeded)
 {
@@ -24,10 +26,13 @@
     <br>
 
 
-     <form asp-action="PassToCreate">
+     <form asp-action="PassToEdit">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
         <table class="table table-sm" cellpadding="0" cellspacing="0" border="0">
+        <table class="table table-sm" cellpadding="0" cellspacing="0" border="0">
+
+                <input asp-for="TourID" hidden  class="form-control" value="@Model.TourID" />
 
            <thead>
             <tr>
