multiple add file tags

--- a/Views/File/Edit.cshtml
+++ b/Views/File/Edit.cshtml
@@ -36,7 +36,7 @@
             <table class="table table-bordered table-sm">
                 <div class="form-group">
                     <label asp-for="TagToAdd" class="control-label">Add Tag</label>
-                    <input asp-for="TagToAdd" class="form-control" value="" />
+                    <textarea asp-for="TagToAdd" class="form-control" value=""></textarea>
                     <span asp-validation-for="TagToAdd" class="text-danger"></span>
                 </div>
             </table>
