--- a/Views/File/Upload.cshtml
+++ b/Views/File/Upload.cshtml
@@ -46,8 +46,8 @@
 
             <table class="table table-bordered table-sm">
                 <div class="form-group">
-                    <label asp-for="TagToAdd" class="control-label">Add Tag</label>
-                    <input asp-for="TagToAdd" class="form-control" value="" />
+                    <label asp-for="TagToAdd" class="control-label">Add Tags (Write each on a new line)</label>
+                    <textarea asp-for="TagToAdd" class="form-control" value=""></textarea>
                     <span asp-validation-for="TagToAdd" class="text-danger"></span>
                 </div>
             </table>
