--- a/Views/TourSites/Create.cshtml
+++ b/Views/TourSites/Create.cshtml
@@ -119,7 +119,7 @@
                         "Target": "EmailBox"
                         }
                     </script>
-                    <input asp-for="Email" id="EmailBox" class="form-control" />
+                    <textarea asp-for="Email" id="EmailBox" class="form-control"></textarea>
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
             </table>
