--- a/Views/TourSites/Edit.cshtml
+++ b/Views/TourSites/Edit.cshtml
@@ -170,7 +170,7 @@
                                 "Target": "ViewerBox"
                                 }
                             </script>
-                            <input asp-for=EmailViewer id="ViewerBox" class="form-control" value=""/>
+                            <textarea asp-for=EmailViewer id="ViewerBox" class="form-control" value=""></textarea>
                         <span asp-validation-for="EmailViewer" class="text-danger"></span>
                     </div>
                 </table>
@@ -205,7 +205,7 @@
                         "Target": "EmailBox"
                         }
                     </script>
-                        <input asp-for="Email" id="EmailBox" class="form-control" value="" />
+                        <textarea asp-for="Email" id="EmailBox" class="form-control" value=""></textarea>
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
             </table>
