--- a/Views/TourSites/Edit.cshtml
+++ b/Views/TourSites/Edit.cshtml
@@ -229,6 +229,35 @@
                     }
                 }
             </table>
+
+                <table class="table table-bordered table-sm">
+                    <div class="form-group">
+                        <label asp-for="TagToAdd" class="control-label">Add Tags</label>
+                        <textarea asp-for="TagToAdd" class="form-control"></textarea>
+                        <span asp-validation-for="TagToAdd" class="text-danger"></span>
+                    </div>
+                </table>
+
+
+                <label>Remove Tags from @Model.TourSite.Title</label>
+                <table class="table table-bordered table-sm">
+                    @if (Model.TourSite.Tags.Count() == 0)
+                    {
+                        <tr><td colspan="2">No Tags</td></tr>
+                    }
+                    else
+                    {
+                        @foreach (string tag in Model.TourSite.Tags)
+                        {
+                            <tr>
+                                <td>@tag</td>
+                                <td>
+                                    <input type="checkbox" name="RemoveTags" value="@tag">
+                                </td>
+                            </tr>
+                        }
+                    }
+                </table>
             }
 
             <div class="form-group">
