--- a/Views/File/Details.cshtml
+++ b/Views/File/Details.cshtml
@@ -42,6 +42,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Embed)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Tags)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.Raw(Model.TagsToString())
+        </dd>
     </dl>
 </div>
 <div>
