--- a/Views/TourSites/Details.cshtml
+++ b/Views/TourSites/Details.cshtml
@@ -78,6 +78,13 @@ else {
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Item1.Lattitude)
         </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Item1.Tags)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.Raw(Model.Item1.TagsToString())
+        </dd>
     </dl>
 </div>
 <div>
