--- a/Views/TourSites/Details.cshtml
+++ b/Views/TourSites/Details.cshtml
@@ -52,39 +52,64 @@ else {
         }
     </div>
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-4">
             @Html.DisplayNameFor(model => model.Item1.Title)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-8">
             @Html.DisplayFor(model => model.Item1.Title)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-4">
             @Html.DisplayNameFor(model => model.Item1.Description)
         </dt>
         <br />
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-8">
             @Html.Raw(Model.Item1.Description)
         </dd>
         <br />
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-4">
             @Html.DisplayNameFor(model => model.Item1.Longitude)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-8">
             @Html.DisplayFor(model => model.Item1.Longitude)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-4">
             @Html.DisplayNameFor(model => model.Item1.Lattitude)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-8">
             @Html.DisplayFor(model => model.Item1.Lattitude)
         </dd>
 
-        <dt class="col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.Item1.Tags)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-8">
             @Html.Raw(Model.Item1.TagsToString())
         </dd>
+
+
+        @if (authorized3.Succeeded)
+        {
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Item1.UniqueClicks)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Item1.UniqueClicks)
+            </dd>
+
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Item1.UniqueVisitors)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.Item1.UniqueClicks)
+            </dd>
+
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Item1.UniqueVisitors)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.Raw(Model.Item1.TotalTimeVisited())
+            </dd>
+        }
     </dl>
 </div>
 <div>
