--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,5 +6,7 @@
     <h4>Hello, welcome to the tour management website. Head to <a asp-controller="TourSites" asp-action="Index">tour sites</a> to see what tours are available.</h4>
 
 
+    <h5>Disclaimer: This site is work in progress. Do not utilize your real information or credentials</h5>
+
 
 </div>
