--- a/Views/TourSites/Create.cshtml
+++ b/Views/TourSites/Create.cshtml
@@ -136,11 +136,11 @@
                     <a href="javascript:void(0);" name="/TourSites/TourListPop" class="modalManager" extra-data='#TourSiteData'>Pick Next Tour</a>
                     <script type="application/json" id="TourSiteData">
                         {
-                        "Target": "TourBox",
+                        "Target": "Next Tour",
                         "Target2": "TourLabel"
                         }
                     </script>
-                    <input asp-for="NextTourID" id="TourBox" class="form-control" hidden></input>
+                    <input asp-for="NextTourID" id="Next Tour" class="form-control" hidden></input>
                     <span asp-validation-for="NextTourID" class="text-danger"></span>
                 </div>
             </table>
