--- a/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -39,8 +39,8 @@
 
     foreach (var site in toursites)
     {
-        longLat.Add([site.Longitude, site.Lattitude]);
 
+        double[] pair = [site.Longitude, site.Lattitude, 404, 404]; //this 404, 404 means there is no next point for the line
 
 
 
@@ -81,9 +81,25 @@
         {
             var nextSite = toursites.Find(site.NextTourSiteID);
 
+
             if (nextSite != null)
-                tourLines.Add([site.Longitude, site.Lattitude, nextSite.Longitude, nextSite.Lattitude]);
+            {
+                var allowedUsers3 = nextSite.ApprovedUsers;
+                AuthorizationResult authorized4 = await auth.AuthorizeAsync(User, allowedUsers1, "TourAccess"); //Who can view this
+
+                var allowedUsers4 = nextSite.ApprovedEditUsers;
+                AuthorizationResult authorized5 = await auth.AuthorizeAsync(User, allowedUsers2, "TourAccess"); //Who can edit this
+
+                if (authorized3.Succeeded || authorized4.Succeeded || (nextSite.Visibility == VisibilityType.Public))
+                {
+                    pair[2] = nextSite.Longitude;
+                    pair[3] = nextSite.Lattitude;
+                }
+            }
+
         }
+
+        longLat.Add(pair);
 
         placeNames.Add(site.Title);
 
@@ -136,7 +152,62 @@
             }
         };
 
-         const simpleLineSymbol = {
+
+        var lineColor = [0,0,0,255] //black
+
+        const LineArrowSymbol = {
+        type: "cim",
+        data: {
+            type: "CIMSymbolReference",
+            symbol: {
+                type: "CIMLineSymbol",
+                symbolLayers: [{
+                    type: "CIMSolidStroke",
+                    enable: true,
+                    width: 1,
+                    color: lineColor
+                },
+                {
+                    // arrow symbol
+                    type: "CIMVectorMarker",
+                    enable: true,
+                    size: 3,
+                    markerPlacement: {
+                        type: "CIMMarkerPlacementAlongLineSameSize",
+                        endings: "NoConstraint",
+                        offsetAlongLine: 25,
+                        placementTemplate: [50],
+                        angleToLine: true
+                    },
+                    frame: {
+                        xmin: -5,
+                        ymin: -5,
+                        xmax: 5,
+                        ymax: 5
+                    },
+                    markerGraphics: [{
+                        type: "CIMMarkerGraphic",
+                        geometry: {
+                            rings: [[[-30, -10], [-30, 10], [0, 0], [-30, -10]]]
+                        },
+                        symbol: {
+                            // fill for the arrow symbol
+                            type: "CIMPolygonSymbol",
+                            symbolLayers: [{
+                                type: "CIMSolidFill",
+                                enable: true,
+                                color: lineColor
+                            }]
+                        }
+                    }]
+                }]
+            }
+            }
+        };
+
+
+
+        const simpleLineSymbol = {
           type: "simple-line",
           color: [226, 119, 40], // Orange
           width: 2
@@ -152,7 +223,6 @@
         var placeNames = @Json.Serialize(placeNames);
         var colors = @Json.Serialize(colors);
         var iconColors =  @Json.Serialize(iconColors);
-        var tourLines = JSON.parse("@Json.Serialize(tourLines)");
 
 
 
@@ -195,25 +265,32 @@
             pointOnTheMap1.geometry = point;
 
             view.graphics.add(pointOnTheMap1);
+
+            var secondLong = ePoint[2];
+            var secondLat = ePoint[3];
+
+
+            if (secondLong != 404 && secondLat != 404) {
+
+                var arrowPoint1 = []
+                var polyline = {
+                  type: "polyline",
+                  paths: [
+                    [longitude, latitude], //Longitude, latitude
+                    [secondLong, secondLat] //Longitude, latitude
+                  ]
+                };
+
+                const polylineGraphic = new Graphic({
+                  geometry: polyline,
+                  symbol: LineArrowSymbol
+                });
+                graphicsLayer.add(polylineGraphic);
+            }
+
+
         }
 
-        for (let i = 0; i < tourLines.length; i++){
-
-            var linePoints = tourLines[i];
-            var polyline = {
-              type: "polyline",
-              paths: [
-                [linePoints[0], linePoints[1]], //Longitude, latitude
-                [linePoints[2], linePoints[3]] //Longitude, latitude
-              ]
-            };
-
-            const polylineGraphic = new Graphic({
-              geometry: polyline,
-              symbol: simpleLineSymbol
-            });
-            graphicsLayer.add(polylineGraphic);
-        }
 
         //create a Graphic without geometry - this will be set later
         var pointOnTheMap = new Graphic({
